move tests beside src, update ci test command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run:
           name: run tests
           command: |
-            cd test && go test
+            go test ./...
 
       - save_cache:
           key: pkg-cache-{{ checksum "go.sum" }}
