--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
     environment:
       - DATASTORE_PROJECT_ID=convo-api
       - DATASTORE_LISTEN_ADDRESS=0.0.0.0:8081
+    command: --consistency=1.0
     ports:
       - "8081"
   elasticsearch:
