--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - DATASTORE_EMULATOR_HOST=datastore:8081
       - DATASTORE_EMULATOR_HOST_PATH=datastore:8081/datastore
       - DATASTORE_HOST=http://datastore:8081
+    env_file:
+      - ./.env
     volumes:
       - .:/var/www
     links:
