--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           DATASTORE_EMULATOR_HOST_PATH: localhost:8081/datastore
           DATASTORE_HOST: http://localhost:8081
           ELASTICSEARCH_HOST: localhost
-
+          CGO_ENABLED: "0"
       - image: singularities/datastore-emulator
         command: --no-store-on-disk --consistency=1.0
         environment:
