--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
         environment:
           DATASTORE_PROJECT_ID: local-convo-api
           DATASTORE_LISTEN_ADDRESS: localhost:8081
-
+      - image: mongo
       - image: elasticsearch:7.1.1
         environment:
           cluster.name: docker-cluster
