handle not founds properly, update indexes

--- a/index.yaml
+++ b/index.yaml
@@ -16,3 +16,15 @@ indexes:
       - name: OwnerKey
       - name: CreatedAt
         direction: desc
+
+  - kind: Note
+    properties:
+      - name: Pin
+      - name: CreatedAt
+        direction: desc
+
+  - kind: Note
+    properties:
+      - name: Tags
+      - name: CreatedAt
+        direction: desc
