update indexes again

--- a/index.yaml
+++ b/index.yaml
@@ -28,3 +28,9 @@ indexes:
       - name: Tags
       - name: CreatedAt
         direction: desc
+
+  - kind: Note
+    properties:
+      - name: Variant
+      - name: CreatedAt
+        direction: desc
