--- a/app.yaml
+++ b/app.yaml
@@ -9,3 +9,12 @@ handlers:
   - url: .*
     script: auto
     secure: always
+
+instance_class: F2
+
+inbound_services:
+  - warmup
+
+automatic_scaling:
+  max_instances: 2
+  min_instances: 1
