sort threads by updated at, remove outdated load logic

--- a/index.yaml
+++ b/index.yaml
@@ -11,6 +11,12 @@ indexes:
       - name: CreatedAt
         direction: desc
 
+  - kind: Thread
+    properties:
+      - name: UserKeys
+      - name: UpdatedAt
+        direction: desc
+
   - kind: Note
     properties:
       - name: OwnerKey
